# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
lib_LTLIBRARIES = libquid.la
libquid_la_LDFLAGS=-module -avoid-version -shared 
libquid_la_CFLAGS=-Wall -Wmissing-prototypes -Wpointer-arith -Wdeclaration-after-statement -Wendif-labels -Wmissing-format-attribute -Wformat-security
libquid_la_SOURCES=quid.c
